# wikicfp-ggs

./: .gitignore  GII-GRIN-SCIE-Conference-Rating-22-giu-2021.csv  Readme.md  manifest.json  pack.sh  pyproject.toml  scraping.py  wikicfp_ggs.js
src/: GII-GRIN-SCIE-Conference-Rating-24-ott-2021-9.17.09-Output.csv  manifest.json  predatories.txt  wikicfp_ggs.js
