[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipdb<1.0.0,>=0.13.9",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "wikicfp_ggs"
version = "0.1.0"
description = ""
authors = [
    {name = "Federico Simonetta", email = "fsimonetta@iccmu.es"},
]
dependencies = ["requests<3.0.0,>=2.26.0", "beautifulsoup4<5.0.0,>=4.10.0"]
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}

[project.urls]
